# AIPPT

./: .gitignore  README.md  map.md  package.json  progress.md  start.bat  start.sh  test_history_feature.py  todolist.md  xuqiu.txt
.github/workflows/: release.yml
backend/: .env.backup.20251210_190323  .env.deprecated  .env.example  BATCH_GENERATION_README.md  CONCURRENCY_CONFIG.md  README.md  main.py  requirements.txt  start.bat  test_all_apis.py  test_batch.sh  test_batch_generation.py  test_results.json  test_with_protection.pptx
backend/app/: config.py  dependencies.py  main.py
backend/app/routers/: config.py  export.py  outline.py  project.py  slide.py  (+1 more)
backend/data/: config.json  config.json.backup  config.json.example  templates.json
backend/tests/: test_batch_worker_limits.py  test_outline_limits.py
doc/: PROJECT_TECHNICAL_GUIDE.md  progress.md  prompt_pipeline.md  宣传.md  开发文档.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
logs/: generation_log.md
phase1_prototype/: config.yaml  config.yaml.example  nano_banana_frontend_server.py  requirements.txt
phase1_prototype/doc/: progress.md
phase1_prototype/frontend/: index.html
scripts/: start-backend-window.bat  start-frontend-window.bat  verify_local_runtime.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: start-backend  start-backend.sh
src-tauri/capabilities/: default.json
src-tauri/clean_build_env/: pyvenv.cfg
src-tauri/icons/: icon.icns
(+51 files in other folders)
